# medium

calc_spec_driven/: README.md  calc_cli.py  constitution.md  plan.md  pyproject.toml  spec.md  tasks.md
calc_spec_driven/calc/: __init__.py  operations.py
calc_spec_driven/tests/: test_operations.py
project_documentation/: prompt.md  prompt_high_level.md  readme.md
